--- a/monogdb/windows/mongodb.conf
+++ b/monogdb/windows/mongodb.conf
@@ -1,4 +1,4 @@
 port=27017
-dbpath=D:\mongodb\data\db
-logpath=D:\mongodb\data\log\mongodb.log
+dbpath=E:\mongodb\data\db
+logpath=E:\mongodb\data\log\mongodb.log
 logappend=true
