--- a/.gitignore
+++ b/.gitignore
@@ -59,5 +59,5 @@ setuper web app/static/files
 setuper app/installcopy/distwin/package/*.exe
 
 setuper app/uitemplate/Publish
-
+setuper app/uitemplate/build_error_log.txt
 *.out
