--- a/.gitignore
+++ b/.gitignore
@@ -56,6 +56,7 @@ target/
 
 setuper web app/static/files
 
+setuper app/installcopy/distwin
 setuper app/installcopy/distwin/package/*.exe
 
 setuper app/uitemplate/Publish
