--- a/setper cli app/package/package.json
+++ b/setper cli app/package/package.json
@@ -13,7 +13,7 @@
     "softwarename": "QFramer",
     "files": [
         {
-            "path": "C:/Users/djf/Desktop/ExeSource.7z",
+            "path": "ExeSource.7z",
             "name": "ExeSource.7z"
         }
     ]
