add setup cli lua app

--- a/setuper cli app/package/package.json
+++ b/setuper cli app/package/package.json
@@ -3,6 +3,10 @@
         {
             "path": "CloudSetuper.7z",
             "name": "CloudSetuper.7z"
+        },
+        {
+            "path": "1.png",
+            "name": "1.png"
         }
     ],
     "softwareemail": "CloudSetuper",
